--- a/recycle.html
+++ b/recycle.html
@@ -10,23 +10,22 @@
 
 
     <!-- Favicon icon-->
-    <link rel="shortcut icon" type="image/x-icon" href="../assets/images/favicon/favicon.ico">
 
 
 
     <!-- Libs CSS -->
-    <link href="../assets/libs/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="../assets/libs/feather-webfont/dist/feather-icons.css" rel="stylesheet" />
-    <link href="../assets/libs/slick-carousel/slick/slick.css" rel="stylesheet" />
-    <link href="../assets/libs/slick-carousel/slick/slick-theme.css" rel="stylesheet" />
-    <link href="../assets/libs/simplebar/dist/simplebar.min.css" rel="stylesheet" />
-    <link href="../assets/libs/nouislider/dist/nouislider.min.css" rel="stylesheet">
-    <link href="../assets/libs/tiny-slider/dist/tiny-slider.css" rel="stylesheet">
-    <link href="../assets/libs/dropzone/dist/min/dropzone.min.css" rel="stylesheet" />
-    <link href="../assets/libs/prismjs/themes/prism-okaidia.min.css" rel="stylesheet">
+    <link href="assets/libs/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="assets/libs/feather-webfont/dist/feather-icons.css" rel="stylesheet" />
+    <link href="assets/libs/slick-carousel/slick/slick.css" rel="stylesheet" />
+    <link href="assets/libs/slick-carousel/slick/slick-theme.css" rel="stylesheet" />
+    <link href="assets/libs/simplebar/dist/simplebar.min.css" rel="stylesheet" />
+    <link href="assets/libs/nouislider/dist/nouislider.min.css" rel="stylesheet">
+    <link href="assets/libs/tiny-slider/dist/tiny-slider.css" rel="stylesheet">
+    <link href="assets/libs/dropzone/dist/min/dropzone.min.css" rel="stylesheet" />
+    <link href=".assets/libs/prismjs/themes/prism-okaidia.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link rel="stylesheet" href="../assets/css/theme.min.css">
+    <link rel="stylesheet" href="assets/css/theme.min.css">
     <title>Waste 360 Manager</title>
 
 </head>
@@ -146,24 +145,24 @@
 
     <!-- Scripts -->
     <!-- Libs JS -->
-    <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/libs/jquery-countdown/dist/jquery.countdown.min.js"></script>
-    <script src="../assets/libs/slick-carousel/slick/slick.min.js"></script>
-    <script src="../assets/libs/simplebar/dist/simplebar.min.js"></script>
-    <script src="../assets/libs/nouislider/dist/nouislider.min.js"></script>
-    <script src="../assets/libs/wnumb/wNumb.min.js"></script>
-    <script src="../assets/libs/rater-js/index.js"></script>
-    <script src="../assets/libs/prismjs/prism.js"></script>
-    <script src="../assets/libs/prismjs/components/prism-scss.min.js"></script>
-    <script src="../assets/libs/prismjs/plugins/toolbar/prism-toolbar.min.js"></script>
-    <script src="../assets/libs/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"></script>
-    <script src="../assets/libs/tiny-slider/dist/min/tiny-slider.js"></script>
-    <script src="../assets/libs/dropzone/dist/min/dropzone.min.js"></script>
-    <script src="../assets/libs/flatpickr/dist/flatpickr.min.js"></script>
-    <script src="../assets/libs/inputmask/dist/jquery.inputmask.min.js"></script>
-    <!-- Theme JS -->
-    <script src="../assets/js/theme.min.js"></script>
+    <script src="assets/libs/jquery/dist/jquery.min.js"></script>
+<script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/libs/jquery-countdown/dist/jquery.countdown.min.js"></script>
+<script src="assets/libs/slick-carousel/slick/slick.min.js"></script>
+<script src="assets/libs/simplebar/dist/simplebar.min.js"></script>
+<script src="assets/libs/nouislider/dist/nouislider.min.js"></script>
+<script src="assets/libs/wnumb/wNumb.min.js"></script>
+<script src="assets/libs/rater-js/index.js"></script>
+<script src="assets/libs/prismjs/prism.js"></script>
+<script src="assets/libs/prismjs/components/prism-scss.min.js"></script>
+<script src="assets/libs/prismjs/plugins/toolbar/prism-toolbar.min.js"></script>
+<script src="assets/libs/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"></script>
+<script src="assets/libs/tiny-slider/dist/min/tiny-slider.js"></script>
+<script src="assets/libs/dropzone/dist/min/dropzone.min.js"></script>
+<script src="assets/libs/flatpickr/dist/flatpickr.min.js"></script>
+<script src="assets/libs/inputmask/dist/jquery.inputmask.min.js"></script>
+<!-- Theme JS -->
+<script src="assets/js/theme.min.js"></script>
 </body>
 
 </html>
