--- a/index.html
+++ b/index.html
@@ -3971,7 +3971,7 @@
     </div>
     <div class="border-top py-4">
       <div class="row align-items-center">
-        <div class="col-md-6"><span class="small text-muted">Copyright 2022 © .  All rights reserved.  <a href="">JIC</a>.</span></div>
+        <div class="col-md-6"><span class="small text-muted">Copyright 2022 © .  All rights reserved.  <a href="">Waste 360 Manager ()</a>.</span></div>
         <div class="col-md-6">
           
         </div>
