--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
                         <div class="list-inline-item">
                           </div>
 
+                          <div class="list-inline-item">
+                            <a href="#" class="text-muted" data-bs-toggle="modal" data-bs-target="#locationModal">
+
+              <img src="assets/images/banner/logo.jpeg" width="60px">
+            </a>
+                        </div>
+
+
+
                         <div class="list-inline-item">
                             <a href="#" class="text-muted" data-bs-toggle="modal" data-bs-target="#locationModal">
 
