--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="offcanvas offcanvas-start p-4 w-xxl-20 w-lg-30" id="navbar-default">
                 <div class="d-flex justify-content-between align-items-center mb-2 ">
-                    <h5 href="index.html"> 360° Waste Manager</h5>
+                    <h5 href="index.html">  <img src="assets/images/banner/logo.jpeg" width="80px"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
 
@@ -1009,13 +1009,13 @@
                                                 <div class="text-center position-relative ">
 
                                                     <!-- img -->
-                                                    <a href="#!"> <img src="assets/images/banner/Df.jpeg"
+                                                    <a href="#!"> <img src="assets/images/banner/poster.jpeg"
                             alt="waste" class="mb-3 img-fluid"></a>
                                                    
 
                                                 </div>
                                                 <!-- title -->
-                                                <h2 class="fs-6"><a href="#!" class="text-inherit text-decoration-none">Paper Waste</a></h2>
+                                                <h2 class="fs-6"><a href="#!" class="text-inherit text-decoration-none">Aquapoincs Sensor</a></h2>
                                              
                                                 <!-- price -->
                                                 <div class="d-flex justify-content-between align-items-center mt-3">
