--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                           <div class="list-inline-item">
                             <a href="#" class="text-muted" data-bs-toggle="modal" data-bs-target="#locationModal">
 
-              <img src="assets/images/banner/logo.jpeg" width="60px">
+              <img src="assets/images/banner/logo.png" width="60px">
             </a>
                         </div>
 
@@ -124,7 +124,7 @@
             </div>
             <div class="offcanvas offcanvas-start p-4 w-xxl-20 w-lg-30" id="navbar-default">
                 <div class="d-flex justify-content-between align-items-center mb-2 ">
-                    <h5 href="index.html">  <img src="assets/images/banner/logo.jpeg" width="80px"></h5>
+                    <h5 href="index.html">  <img src="assets/images/banner/logo.png" width="80px"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
 
