--- a/index.html
+++ b/index.html
@@ -165,6 +165,17 @@
                         </ul>
                     </li>
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Farm Inputs
+          </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="">Seeding</a></li>
+                            <li><a class="dropdown-item" href="">Chemicals</a></li>
+                            <li><a class="dropdown-item" href="">Fertilizer</a></li>
+                            
+                        </ul>
+                    </li>
                    
                     <li class="nav-item ">
                         <a class="nav-link" href="recycle.html">
